<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ImageView
        android:layout_width="512dp"
        android:layout_height="811dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/start_background" />

    <EditText
        android:id="@+id/txtPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail2" />

    <EditText
        android:id="@+id/txtSurname2"
        android:layout_width="129dp"
        android:layout_height="41dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtSurname"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/txtName2"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:layout_marginTop="84dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintEnd_toStartOf="@+id/txtSurname2"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/txtEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName2" />

    <EditText
        android:id="@+id/txtConfirmPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtConfirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="saveChanges"
        android:text="@string/save_changes"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="goMain"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/return_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>