<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="587dp"
        android:layout_height="775dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/start_background" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="83dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="goBack"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/return_icon" />

    <EditText
        android:id="@+id/txtSurname"
        android:layout_width="129dp"
        android:layout_height="41dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtSurname"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtName"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintEnd_toStartOf="@+id/txtSurname"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtConfirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/buttonDoSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="sigIn"
        android:text="@string/buttonDoSign"
        android:textSize="24sp"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword"
        app:layout_constraintVertical_bias="0.081" />

</androidx.constraintlayout.widget.ConstraintLayout>