<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/start_background">

    <ImageView
        android:id="@+id/buttonGoBack2"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="goBack"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/return_icon" />

    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="gosigIn"
        android:text="@string/buttonSign"
        android:textSize="22sp"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="85dp"
        android:layout_marginTop="152dp"
        android:onClick="logIn"
        android:text="@string/buttonDoLogin"
        android:textSize="20sp"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <EditText
        android:id="@+id/txtLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtLoginEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoBack2" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtLoginPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>